@startuml

title __TALL_TALE.APP's Class Diagram__\n

  namespace Activities {
    class Activities.AddBook {
    }
  }
  

  namespace Activities {
    class Activities.EditBookActivity {
    }
  }
  

  namespace Activities {
    class Activities.LoginScreenActivity {
    }
  }
  

  namespace Activities {
    class Activities.MainActivity {
    }
  }
  

  namespace Activities {
    class Activities.SetGoalActivity {
    }
  }
  

  namespace Controllers {
    class Controllers.Audio {
    }
  }
  

  namespace Controllers {
    class Controllers.Digital {
    }
  }
  

  namespace Controllers {
    class Controllers.Physical {
    }
  }
  

  namespace Database {
    class Database.Book {
    }
  }
  

  namespace Database {
    class Database.BookAdapter {
    }
  }
  

  namespace Database {
    interface Database.BookDao {
    }
  }
  

  namespace Database {
    class Database.BookVH {
    }
  }
  

  namespace Database {
    abstract class Database.TallTaleDatabase {
    }
  }
  

  namespace Database {
    class Database.User {
    }
  }
  

  namespace Database {
    interface Database.UserDao {
    }
  }
  

  namespace Fragments {
    class Fragments.ConfirmCompletionFragment {
    }
  }
  

  namespace Fragments {
    class Fragments.IncreaseGoalFragment {
    }
  }
  

  namespace Fragments {
    class Fragments.SelectReportFragment {
    }
  }
  

  namespace Fragments {
    class Fragments.TutorialFragment {
    }
  }
  

  Activities.AddBook -up-|> androidx.appcompat.app.AppCompatActivity
  Activities.AddBook o-- Database.Book : newBook
  Activities.AddBook o-- Activities.AddBook.Type : selectedType
  Activities.EditBookActivity -up-|> androidx.appcompat.app.AppCompatActivity
  Activities.LoginScreenActivity -up-|> androidx.appcompat.app.AppCompatActivity
  Activities.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  Activities.MainActivity o-- Database.BookAdapter : adapter
  Activities.SetGoalActivity -up-|> androidx.appcompat.app.AppCompatActivity
  Controllers.Audio -up-|> Database.Book
  Controllers.Digital -up-|> Database.Book
  Controllers.Physical -up-|> Database.Book
  Database.BookAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  Database.BookVH -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  Database.BookVH o-- Database.BookAdapter : adapter
  Database.TallTaleDatabase -up-|> androidx.room.RoomDatabase
  Fragments.ConfirmCompletionFragment -up-|> androidx.fragment.app.Fragment
  Fragments.IncreaseGoalFragment -up-|> androidx.fragment.app.Fragment
  Fragments.SelectReportFragment -up-|> androidx.fragment.app.Fragment
  Fragments.TutorialFragment -up-|> androidx.fragment.app.Fragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
